2015-03-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/information-dialog.c (balsa_information_dialog),
	(balsa_information_list): use header bars in dialogs.

2015-03-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/folder-conf.c (folder_conf_imap_node), (browse_button_cb),
	(subfolder_conf_clicked_ok), (folder_conf_imap_sub_node),
	(folder_conf_delete): use header bars in dialogs.

2015-03-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/filter-edit-callbacks.c (fe_edit_condition): use header
	bar in dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/balsa-mime-widget-callbacks.c
	(balsa_mime_widget_ctx_menu_save): use header bar in dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/balsa-message.c: use header bar in dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/balsa-mblist.c (bmbl_mru_show_tree): use header bar in
	dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/balsa-index.c (balsa_index_pipe): use header bar in
	dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/balsa-app.c (ask_password_real): use header bar in dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/address-book-config.c (create_generic_dialog): use header
	bar in all dialogs.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/ab-window.c (balsa_ab_window_new): avoid multiple dynamic
	casts.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/ab-window.c (balsa_ab_window_new): drop redundant dynamic
	casts to GtkWidget

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar

	* src/ab-window.c (balsa_ab_window_new): use header bar in
	dialog.

2015-03-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use header bar
